web/modal: fix scrollbars (#606)

--- a/web/src/ui/modal/Lightbox.css
+++ b/web/src/ui/modal/Lightbox.css
@@ -30,7 +30,7 @@ div.overlay {
 		}
 
 		> div.modal-box-inner {
-			overflow: scroll;
+			overflow: auto;
 		}
 	}
 }
